--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
         <div class="row justify-content-center m-60px-b md-m-30px-b">
           <div class="col-12 col-md-10 col-lg-7">
             <div class="section-title text-center">
-              <h2 class="font-alt">Our Portfolio</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi </p>
+              <h2 class="font-alt">Training Videos</h2>
+              <p>Here is a selection of some of our training videos, select from the topics below to find the most suitable for you</p>
             </div>
           </div>
         </div>
@@ -143,9 +143,9 @@
         <div class="portfolio-filter m-30px-b">
           <ul class="filter text-center">
             <li class="active" data-filter="*">All</li>
-            <li data-filter=".photoshop">Photoshop</li>
-            <li data-filter=".website">Website</li>
-            <li data-filter=".apps">Apps</li>
+            <li data-filter=".techterms">Tech terms</li>
+            <li data-filter=".website">Web Development</li>
+            <li data-filter=".apps">Mobile App Development</li>
           </ul>
         </div> <!-- Portfolio Filter -->
 
@@ -203,7 +203,7 @@
               </div> <!-- Portfolio -->
             </li> <!-- col -->
 
-            <li class="portfolio-item photoshop apps">
+            <li class="portfolio-item techterms apps">
               <div class="portfolio-col portfolio-hover-01">
                 <div class="portfolio-img">
                   <a href="#">
@@ -223,13 +223,13 @@
                 </div>
 
                 <div class="portfolio-info">
-                  <h5>Ryan Portpolio Template</h5>
-                  <span>Resent Work</span>
+                  <h5>Tech Stacks</h5>
+                  <span>What is a tech stack? A look into tech terminology around the tech, software arhitecture and what it all means</span>
                 </div>
               </div> <!-- Portfolio -->
             </li> <!-- col -->
 
-            <li class="portfolio-item photoshop website">
+            <li class="portfolio-item techterms website">
               <div class="portfolio-col portfolio-hover-01">
                 <div class="portfolio-img">
                   <a href="#">
@@ -249,8 +249,8 @@
                 </div>
 
                 <div class="portfolio-info">
-                  <h5>Ryan Portpolio Template</h5>
-                  <span>Resent Work</span>
+                  <h5>Data Stores</h5>
+                  <span>A look at tech and terminology related to data, how is stored and used on websites and applications</span>
                 </div>
               </div> <!-- Portfolio -->
             </li> <!-- col -->
